Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp
@@ -1957,6 +1957,10 @@ bool GraphicsLayerCA::createFilterAnimationsFromKeyframes(const KeyframeValueLis
         return false;
         
     const FilterOperations* operations = static_cast<const FilterAnimationValue*>(valueList.at(listIndex))->value();
+    // Make sure the platform layer didn't fallback to using software filter compositing instead.
+    if (!PlatformCALayer::filtersCanBeComposited(*operations))
+        return false;
+
     int numAnimations = operations->size();
 
     // FIXME: We can't currently hardware animate shadows.
